codama-macros/tests/codama_attribute/program_directive/missing_name.fail.rs
use codama_macros::codama;

#[codama(program(address = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"))]
pub struct Test;

fn main() {}
